# DocForge

./: .env.example  .gitignore  README.md  USER_GUIDE.md  index.html  package-lock.json  package.json  tsconfig.json  vite.config.ts  vitest.config.ts
Projects/1/: document.json  metadata.db  styles.json
python-bridge/: README.md  word_com.py
src/: App.tsx  index.css  vite-env.d.ts
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/icons/: icon.icns
src-tauri/src/: db.rs  lib.rs  main.rs
src-tauri/src/commands/: assets.rs  mod.rs  project.rs  project_metadata.rs  settings.rs  word.rs
src/blocks/bulletList/: index.tsx
src/blocks/checklist/: ChecklistBlock.tsx  index.ts
src/blocks/code/: CodeBlock.tsx  CodeProperties.tsx  index.ts
src/blocks/equation/: EquationBlock.tsx  EquationProperties.tsx  index.ts
src/components/: ErrorBoundary.tsx
src/hooks/: useKeyboardShortcuts.ts  usePreviewSync.ts
src/lib/: defaultStyles.ts  documentFactory.ts  env.ts  openaiModels.ts  projectDialogs.ts  settingsPersistence.ts  utils.ts
src/registry/: BlockRegistry.ts  types.ts
src/schema/: assets.ts  document.ts  index.ts  styles.ts
src/services/: AssetService.ts  ProjectService.ts  ValidationService.ts  documentReducer.ts
src/stores/: aiStore.ts  assetStore.ts  auditStore.ts  documentStore.ts  index.ts  projectStore.ts  selectionStore.ts  settingsStore.ts  styleStore.ts  uiStore.ts  wordImportStore.ts
src/templates/: index.ts
src/test/: app.test.ts  documentIntegration.test.ts  loadEnv.ts  setup.ts
(+62 files in other folders)
